[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "food_delivery_ts"
version = "0.0.1"
description = "Home Assignment for Applied Scientist Position at Wolt"
authors = [
  { name = "Daniel Wohlrath" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["food_delivery_ts"]
force_sort_within_sections = true
