[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "food_delivery_ts"
version = "0.0.1"
description = "Time Series Analysis of Food Delivery Services"
authors = [
  { name = "Daniel Wohlrath" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.13"

[tool.flit.module]
name = "src"

[tool.black]
line-length = 85
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["food_delivery_ts"]
force_sort_within_sections = true